--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
     </div>
   </div>
 
-  <div class="controls">
+  <div class="row">
+    <button id="advancedBtn">Advanced</button>
+  </div>
+
+  <div class="controls collapsed">
     <div class="control-group">
-      <label>Quality <span id="qval">0.90</span></label>
-      <input id="quality" type="range" min="0.05" max="1" step="0.05" value="0.90">
+      <label>Quality <span id="qval">0.80</span></label>
+      <input id="quality" type="range" min="0.05" max="1" step="0.05" value="0.80">
     </div>
 
     <div class="control-group">
@@ -45,7 +49,7 @@
     
     <div class="control-group">
       <label>Randomize filename</label>
-      <div class="toggle active" id="randomize"><div class="toggle-slider"></div></div>
+      <div class="toggle" id="randomize"><div class="toggle-slider"></div></div>
     </div>
   </div>
 
@@ -95,6 +99,15 @@ const nval = document.getElementById('nval');
 const maxwEl = document.getElementById('maxw');
 const autocropEl = document.getElementById('autocrop');
 const randomizeEl = document.getElementById('randomize');
+const advancedBtn = document.getElementById('advancedBtn');
+const controlsEl = document.querySelector('.controls');
+
+// Advanced toggle
+advancedBtn.addEventListener('click', () => {
+  const isCollapsed = controlsEl.classList.contains('collapsed');
+  controlsEl.classList.toggle('collapsed');
+  advancedBtn.textContent = isCollapsed ? 'Hide Advanced' : 'Advanced';
+});
 
 // Metadata elements
 const origFileName = document.getElementById('orig-file-name');
