--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Image Cleaner</title>
+<title>Image Cleaner - Remove Metadata, Convert to WebP | Free Online Tool</title>
+<meta name="description" content="Free online image cleaner tool. Remove EXIF metadata, convert images to WebP format, strip GPS data, and protect privacy. No upload required - all processing happens locally in your browser.">
+<meta name="keywords" content="image cleaner, metadata remover, webp converter, exif remover, image to webp, remove gps data, privacy tool, image optimizer">
+<meta name="robots" content="index, follow">
+<meta property="og:title" content="Image Cleaner - Remove Metadata & Convert to WebP">
+<meta property="og:description" content="Free tool to clean image metadata and convert to WebP. Remove EXIF, GPS data for privacy protection.">
+<meta property="og:type" content="website">
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Image Cleaner - Metadata Remover & WebP Converter">
+<meta name="twitter:description" content="Clean image metadata and convert to WebP format. Privacy-focused image processing tool.">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Alata&display=swap" rel="stylesheet">
@@ -12,7 +21,7 @@
 </head>
 <body class="dark-theme">
 <h2 class="shimmer">Image Cleaner (No Upload)</h2>
-<p class="subtitle">Removes metadata, adds noise, and randomizes filenames Image</p>
+<p class="subtitle">Removes metadata, Convert to webp, Random of Filename</p>
 
 <div class="container">
   <div class="row">
@@ -71,6 +80,22 @@
 </div>
 
 
+
+<div style="position:absolute;left:-9999px;opacity:0;height:1px;overflow:hidden;">
+  <h1>Image Cleaner - Professional Metadata Remover and WebP Converter</h1>
+  <p>Best free online image cleaner tool to remove metadata from photos. Convert images to WebP format while stripping EXIF data, GPS coordinates, and camera information. Protect your privacy with our advanced image to webp converter that removes all hidden metadata from JPEG, PNG, and other image formats.</p>
+  <h2>Features of Our Image Metadata Remover:</h2>
+  <ul>
+    <li>Remove EXIF metadata from images completely</li>
+    <li>Convert image to webp format with high quality</li>
+    <li>Strip GPS location data from photos</li>
+    <li>Bulk image processing and conversion</li>
+    <li>Privacy-focused image cleaner tool</li>
+    <li>No upload required - process images locally</li>
+  </ul>
+  <h3>Why Use Our Image to WebP Converter?</h3>
+  <p>Our image cleaner removes sensitive metadata including camera settings, GPS coordinates, timestamps, and device information. Convert your images to efficient WebP format while ensuring complete privacy protection. Perfect for photographers, bloggers, and privacy-conscious users who need a reliable metadata remover tool.</p>
+</div>
 
 <div class="security-note">
   <h3>Privacy Protection Features</h3>
