--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <title>Image Cleaner - Remove Metadata, Convert to WebP | Free Online Tool</title>
-<meta name="description" content="Free online image cleaner tool. Remove EXIF metadata, convert images to WebP format, strip GPS data, and protect privacy. No upload required - all processing happens locally in your browser.">
-<meta name="keywords" content="image cleaner, metadata remover, webp converter, exif remover, image to webp, remove gps data, privacy tool, image optimizer">
+<meta name="description" content="Free no upload image cleaner tool. Remove EXIF metadata, convert images to WebP format offline. Strip GPS data and protect privacy - all processing happens locally in your browser without uploading files.">
+<meta name="keywords" content="image cleaner, metadata remover, webp converter, exif remover, image to webp, remove gps data, privacy tool, image optimizer, no upload image cleaner, offline image processor, client side image converter">
 <meta name="robots" content="index, follow">
 <meta property="og:title" content="Image Cleaner - Remove Metadata & Convert to WebP">
 <meta property="og:description" content="Free tool to clean image metadata and convert to WebP. Remove EXIF, GPS data for privacy protection.">
@@ -83,7 +83,7 @@
 
 <div style="position:absolute;left:-9999px;opacity:0;height:1px;overflow:hidden;">
   <h1>Image Cleaner - Professional Metadata Remover and WebP Converter</h1>
-  <p>Best free online image cleaner tool to remove metadata from photos. Convert images to WebP format while stripping EXIF data, GPS coordinates, and camera information. Protect your privacy with our advanced image to webp converter that removes all hidden metadata from JPEG, PNG, and other image formats.</p>
+  <p>Best free no upload image cleaner tool to remove metadata from photos offline. Convert images to WebP format while stripping EXIF data, GPS coordinates, and camera information. Protect your privacy with our advanced offline image to webp converter that removes all hidden metadata from JPEG, PNG, and other image formats without uploading files to any server.</p>
   <h2>Features of Our Image Metadata Remover:</h2>
   <ul>
     <li>Remove EXIF metadata from images completely</li>
@@ -91,7 +91,10 @@
     <li>Strip GPS location data from photos</li>
     <li>Bulk image processing and conversion</li>
     <li>Privacy-focused image cleaner tool</li>
-    <li>No upload required - process images locally</li>
+    <li>No upload required - process images locally offline</li>
+    <li>Client-side image processing without server upload</li>
+    <li>Offline image cleaner and webp converter</li>
+    <li>No file upload image metadata remover</li>
   </ul>
   <h3>Why Use Our Image to WebP Converter?</h3>
   <p>Our image cleaner removes sensitive metadata including camera settings, GPS coordinates, timestamps, and device information. Convert your images to efficient WebP format while ensuring complete privacy protection. Perfect for photographers, bloggers, and privacy-conscious users who need a reliable metadata remover tool.</p>
