--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
 </head>
 <body class="dark-theme">
-<h2>Image Cleaner (No Upload)</h2>
-<p class="subtitle">Removes metadata, Convert to webp, Random of Filename</p>
+<h2>Image Cleaner</h2>
+<p class="subtitle">(No Upload)<br>Removes metadata, Convert to webp, Random of Filename</p>
 
 <div class="container">
   <div class="row">
