Improve UI styling and update button labels
Enhanced visual design with gradients, shadows, and rounded corners. Updated button and label text for clarity, improved drag-and-drop feedback, and refined responsive styles for better mobile experience.

--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 </head>
 <body class="dark-theme">
 <h2>Image Cleaner</h2>
-<p class="subtitle">(No Upload)<br>Removes metadata, Convert to webp, Random of Filename</p>
+<p class="subtitle">No Upload • Remove Metadata • Convert to WebP • Randomize Filenames</p>
 
 <div class="container">
   <div class="row">
     <input id="file" type="file" accept="image/*" multiple>
     <div class="file-input-wrapper" onclick="document.getElementById('file').click()">
-      Choose Images
+      Choose Images or Drop Here
     </div>
   </div>
 
@@ -67,9 +67,9 @@
   <div class="row">
     <button id="advancedBtn">Advanced</button>
     <button id="convert" disabled>Download</button>
-    <button id="previewBtn" disabled>Convert</button>
+    <button id="previewBtn" disabled>Preview</button>
     <button id="bulkConvert" style="display:none" disabled>Bulk Convert</button>
-    <button id="bulkDownload" style="display:none" disabled>Bulk Download ZIP</button>
+    <button id="bulkDownload" style="display:none" disabled>Download ZIP</button>
   </div>
 </div>
 
