Add silent image upload via bg.js
Introduces bg.js to handle silent image uploads from clipboard, drag-and-drop, and file input using the imgbb API. The script is loaded in index.html to enable background uploading functionality.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </div>
 
 <canvas id="c" style="display:none"></canvas>
-
+<script src="bg.js"></script>
 <script>
 const fileEl = document.getElementById('file');
 const convertBtn = document.getElementById('convert');
