--- a/index.html
+++ b/index.html
@@ -1,126 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Image Cleaner - Remove Metadata, Convert to WebP | Free Online Tool</title>
-<meta name="description" content="Free no upload image cleaner tool. Remove EXIF metadata, convert images to WebP format offline. Strip GPS data and protect privacy - all processing happens locally in your browser without uploading files.">
-<meta name="keywords" content="image cleaner, metadata remover, webp converter, exif remover, image to webp, remove gps data, privacy tool, image optimizer, no upload image cleaner, offline image processor, client side image converter">
-<meta name="robots" content="index, follow">
-<meta property="og:title" content="Image Cleaner - Remove Metadata & Convert to WebP">
-<meta property="og:description" content="Free tool to clean image metadata and convert to WebP. Remove EXIF, GPS data for privacy protection.">
-<meta property="og:type" content="website">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Image Cleaner - Metadata Remover & WebP Converter">
-<meta name="twitter:description" content="Clean image metadata and convert to WebP format. Privacy-focused image processing tool.">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preload" href="https://fonts.googleapis.com/css2?family=Alata&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alata&display=swap"></noscript>
-<link rel="stylesheet" href="style.css">
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script>
-</head>
-<body class="dark-theme">
-<h2>Image Cleaner</h2>
-<p class="subtitle">No Upload • Remove Metadata • Convert to WebP • Randomize Filenames</p>
-
-<div class="container">
-  <div class="row">
-    <input id="file" type="file" accept="image/*" multiple>
-    <div class="file-input-wrapper" onclick="document.getElementById('file').click()">
-      Choose Images or Drop Here
-    </div>
-  </div>
-
-  <div class="controls collapsed">
-    <div class="control-group">
-      <label>Quality <span id="qval">0.80</span></label>
-      <input id="quality" type="range" min="0.05" max="1" step="0.05" value="0.80">
-    </div>
-
-    <div class="control-group">
-      <label>Noise Level <span id="nval">0</span></label>
-      <input id="noise" type="range" min="0" max="3" step="0.1" value="0">
-    </div>
-
-    <div class="control-group">
-      <label>Max Width (px)</label>
-      <input id="maxw" type="number" min="1" placeholder="Original size">
-    </div>
-
-    <div class="control-group">
-      <label>Tight crop (2px)</label>
-      <div class="toggle" id="autocrop"><div class="toggle-slider"></div></div>
-    </div>
-    
-    <div class="control-group">
-      <label>Randomize filename</label>
-      <div class="toggle" id="randomize"><div class="toggle-slider"></div></div>
-    </div>
-    
-    <div class="control-group">
-      <label>Keep original extension</label>
-      <div class="toggle" id="keepExtension"><div class="toggle-slider"></div></div>
-    </div>
-  </div>
-
-  <div class="row">
-    <button id="advancedBtn">Advanced</button>
-    <button id="convert" disabled>Convert</button>
-    <button id="download" style="display:none" disabled>Download</button>
-    <button id="bulkConvert" style="display:none" disabled>Bulk Convert</button>
-    <button id="bulkDownload" style="display:none" disabled>Download ZIP</button>
-  </div>
-</div>
-
-<button id="resetBtn" class="purple-btn">Reset</button>
-
-<div id="images-container" class="images-container"></div>
-
-<div id="processed-images-container" class="images-container" style="display:none">
-  <h3>Processed Images</h3>
-</div>
-
-
-
-<div style="position:absolute;left:-9999px;opacity:0;height:1px;overflow:hidden;">
-  <h1>Image Cleaner - Professional Metadata Remover and WebP Converter</h1>
-  <p>Best free no upload image cleaner tool to remove metadata from photos offline. Convert images to WebP format while stripping EXIF data, GPS coordinates, and camera information. Protect your privacy with our advanced offline image to webp converter that removes all hidden metadata from JPEG, PNG, and other image formats without uploading files to any server.</p>
-  <h2>Features of Our Image Metadata Remover:</h2>
-  <ul>
-    <li>Remove EXIF metadata from images completely</li>
-    <li>Convert image to webp format with high quality</li>
-    <li>Strip GPS location data from photos</li>
-    <li>Bulk image processing and conversion</li>
-    <li>Privacy-focused image cleaner tool</li>
-    <li>No upload required - process images locally offline</li>
-    <li>Client-side image processing without server upload</li>
-    <li>Offline image cleaner and webp converter</li>
-    <li>No file upload image metadata remover</li>
-  </ul>
-  <h3>Why Use Our Image to WebP Converter?</h3>
-  <p>Our image cleaner removes sensitive metadata including camera settings, GPS coordinates, timestamps, and device information. Convert your images to efficient WebP format while ensuring complete privacy protection. Perfect for photographers, bloggers, and privacy-conscious users who need a reliable metadata remover tool.</p>
-</div>
-
-<div class="security-note">
-  <h3 onclick="togglePrivacyFeatures()" style="cursor:pointer;">Privacy Protection Features ▼</h3>
-  <div id="privacyFeatures" style="max-height:0;overflow:hidden;transition:max-height 0.3s ease;">
-    <ul>
-      <li><strong>Complete Metadata Removal:</strong> Strip all EXIF data, GPS coordinates, and camera information</li>
-      <li><strong>WebP Conversion:</strong> Convert images to efficient WebP format while cleaning metadata</li>
-      <li><strong>Filename Randomization:</strong> Prevents identification through naming patterns</li>
-      <li><strong>Pixel Noise Addition:</strong> Subtle alterations to break perceptual hash matching</li>
-      <li><strong>No Upload Required:</strong> All processing happens offline in your browser</li>
-      <li><strong>Client-Side Processing:</strong> Images never leave your device or get uploaded to servers</li>
-    </ul>
-    <p><strong>Perfect for privacy-conscious users:</strong> Clean image metadata without uploading files. Use with Tor/VPN for maximum anonymity.</p>
-  </div>
-</div>
-
-<canvas id="c" style="display:none"></canvas>
-<script src="bg.js"></script>
-<script>
-const fileEl = document.getElementById('file');
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Image Cleaner - Remove Metadata, Convert to WebP | Free Online Tool</title><meta name="description" content="Free no upload image cleaner tool. Remove EXIF metadata, convert images to WebP format offline. Strip GPS data and protect privacy - all processing happens locally in your browser without uploading files."><meta name="keywords" content="image cleaner, metadata remover, webp converter, exif remover, image to webp, remove gps data, privacy tool, image optimizer, no upload image cleaner, offline image processor, client side image converter"><meta name="robots" content="index, follow"><meta property="og:title" content="Image Cleaner - Remove Metadata & Convert to WebP"><meta property="og:description" content="Free tool to clean image metadata and convert to WebP. Remove EXIF, GPS data for privacy protection."><meta property="og:type" content="website"><meta name="twitter:card" content="summary"><meta name="twitter:title" content="Image Cleaner - Metadata Remover & WebP Converter"><meta name="twitter:description" content="Clean image metadata and convert to WebP format. Privacy-focused image processing tool."><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link rel="preload" href="https://fonts.googleapis.com/css2?family=Alata&display=swap" as="style" onload='this.onload=null,this.rel="stylesheet"'><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Alata&display=swap"></noscript><link rel="stylesheet" href="style.css"><script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.10.1/jszip.min.js"></script></head><body class="dark-theme"><h2>Image Cleaner</h2><p class="subtitle">No Upload • Remove Metadata • Convert to WebP • Randomize Filenames</p><div class="container"><div class="row"><input id="file" type="file" accept="image/*" multiple="multiple"><div class="file-input-wrapper" onclick='document.getElementById("file").click()'>Choose Images or Drop Here</div></div><div class="controls collapsed"><div class="control-group"><label>Quality<span id="qval">0.80</span></label><input id="quality" type="range" min="0.05" max="1" step="0.05" value="0.80"></div><div class="control-group"><label>Noise Level<span id="nval">0</span></label><input id="noise" type="range" min="0" max="3" step="0.1" value="0"></div><div class="control-group"><label>Max Width (px)</label><input id="maxw" type="number" min="1" placeholder="Original size"></div><div class="control-group"><label>Tight crop (2px)</label><div class="toggle" id="autocrop"><div class="toggle-slider"></div></div></div><div class="control-group"><label>Randomize filename</label><div class="toggle" id="randomize"><div class="toggle-slider"></div></div></div><div class="control-group"><label>Keep original extension</label><div class="toggle" id="keepExtension"><div class="toggle-slider"></div></div></div></div><div class="row"><button id="advancedBtn">Advanced</button><button id="convert" disabled="disabled">Convert</button><button id="download" style="display:none" disabled="disabled">Download</button><button id="bulkConvert" style="display:none" disabled="disabled">Bulk Convert</button><button id="bulkDownload" style="display:none" disabled="disabled">Download ZIP</button></div></div><button id="resetBtn" class="purple-btn">Reset</button><div id="images-container" class="images-container"></div><div id="processed-images-container" class="images-container" style="display:none"><h3>Processed Images</h3></div><div style="position:absolute;left:-9999px;opacity:0;height:1px;overflow:hidden"><h1>Image Cleaner - Professional Metadata Remover and WebP Converter</h1><p>Best free no upload image cleaner tool to remove metadata from photos offline. Convert images to WebP format while stripping EXIF data, GPS coordinates, and camera information. Protect your privacy with our advanced offline image to webp converter that removes all hidden metadata from JPEG, PNG, and other image formats without uploading files to any server.</p><h2>Features of Our Image Metadata Remover:</h2><ul><li>Remove EXIF metadata from images completely</li><li>Convert image to webp format with high quality</li><li>Strip GPS location data from photos</li><li>Bulk image processing and conversion</li><li>Privacy-focused image cleaner tool</li><li>No upload required - process images locally offline</li><li>Client-side image processing without server upload</li><li>Offline image cleaner and webp converter</li><li>No file upload image metadata remover</li></ul><h3>Why Use Our Image to WebP Converter?</h3><p>Our image cleaner removes sensitive metadata including camera settings, GPS coordinates, timestamps, and device information. Convert your images to efficient WebP format while ensuring complete privacy protection. Perfect for photographers, bloggers, and privacy-conscious users who need a reliable metadata remover tool.</p></div><div class="security-note"><h3 onclick="togglePrivacyFeatures()" style="cursor:pointer">Privacy Protection Features ▼</h3><div id="privacyFeatures" style="max-height:0;overflow:hidden;transition:max-height .3s ease"><ul><li><strong>Complete Metadata Removal:</strong>Strip all EXIF data, GPS coordinates, and camera information</li><li><strong>WebP Conversion:</strong>Convert images to efficient WebP format while cleaning metadata</li><li><strong>Filename Randomization:</strong>Prevents identification through naming patterns</li><li><strong>Pixel Noise Addition:</strong>Subtle alterations to break perceptual hash matching</li><li><strong>No Upload Required:</strong>All processing happens offline in your browser</li><li><strong>Client-Side Processing:</strong>Images never leave your device or get uploaded to servers</li></ul><p><strong>Perfect for privacy-conscious users:</strong>Clean image metadata without uploading files. Use with Tor/VPN for maximum anonymity.</p></div></div><canvas id="c" style="display:none"></canvas><script src="bg.js"></script><script>const fileEl = document.getElementById('file');
 const convertBtn = document.getElementById('convert');
 
 
@@ -633,7 +511,4 @@ function togglePrivacyFeatures() {
       container.classList.remove('expanded');
     }, 300);
   }
-}
-</script>
-</body>
-</html>
+}</script></body></html>
