--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ function getBaseName(fileName) {
 // Update display after file selection
 function displayImages(files) {
   const container = document.getElementById('images-container');
+  previewUrlManager.cleanup();
   container.innerHTML = '';
   container.style.justifyContent = files.length > 0 ? 'flex-start' : 'center';
   
@@ -220,7 +221,7 @@ function displayImages(files) {
       const img = document.createElement('img');
       img.className = 'preview-image';
       img.alt = file.name;
-      const url = urlManager.create(file);
+      const url = previewUrlManager.create(file);
       img.src = url;
       preview.appendChild(img);
     } else {
@@ -400,7 +401,8 @@ async function processImage(file, opts) {
   canvas.height = height;
   
   // Draw image with optional crop
-  const inset = opts.autocrop ? 2 : 0;
+  const maxInset = Math.floor((Math.min(img.width, img.height) - 1) / 2);
+  const inset = opts.autocrop ? Math.min(2, Math.max(0, maxInset)) : 0;
   ctx.drawImage(img, inset, inset, img.width - inset * 2, img.height - inset * 2, 0, 0, width, height);
   
   // Apply noise if needed
@@ -422,6 +424,10 @@ async function processImage(file, opts) {
   const blob = await new Promise(resolve => {
     canvas.toBlob(resolve, outputType, quality);
   });
+
+  if (!blob) {
+    throw new Error('Failed to encode image.');
+  }
   
   URL.revokeObjectURL(url);
   return { blob, width, height, outputType };
@@ -484,6 +490,19 @@ let processedResults = [];
 
 
 // URL manager to prevent memory leaks
+const previewUrlManager = {
+  urls: new Set(),
+  create(blob) {
+    const url = URL.createObjectURL(blob);
+    this.urls.add(url);
+    return url;
+  },
+  cleanup() {
+    this.urls.forEach(url => URL.revokeObjectURL(url));
+    this.urls.clear();
+  }
+};
+
 const urlManager = {
   urls: new Set(),
   create(blob) {
